--- a/css/updates.css
+++ b/css/updates.css
@@ -19,6 +19,17 @@ body {
   font-weight: 300;
 }
 
+.masthead-bg {
+  background-image: url("../img/bg-surgery.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+}
+
 .overlay {
   position: absolute;
   height: 100%;
