--- a/css/updates.css
+++ b/css/updates.css
@@ -22,8 +22,8 @@ body {
 
 .overlay {
   position: absolute;
-  /*height: 100%;*/
-  /*width: 100%;*/
+  height: 100%;
+  width: 100%;
   background-image: url("../img/bg-surgery-small.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
