--- a/css/updates.css
+++ b/css/updates.css
@@ -101,6 +101,11 @@ body {
   .masthead .masthead-content p {
     font-size: 1.3rem;
   }
+
+  .masthead .logo {
+    padding-left: 3rem;
+    padding-right: 10rem;
+  }
 }
 
 .social-icons ul {
