--- a/css/updates.css
+++ b/css/updates.css
@@ -103,6 +103,7 @@ body {
   }
 
   .masthead .logo {
+    height: 30px;
     padding-left: 3rem;
     padding-right: 10rem;
     padding-bottom: 3rem;
