--- a/css/updates.css
+++ b/css/updates.css
@@ -127,7 +127,7 @@ body {
 .social-icons ul > li > a {
   display: block;
   color: white;
-  background-color: rgba(0, 46, 102, 0.8);
+  background-color: #2AACBE;
   border-radius: 100%;
   font-size: 2rem;
   line-height: 4rem;
