--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -146,8 +146,8 @@ body {
 }
 
 .btn-secondary {
-  background-color: #BE2A2A;
-  border-color: #BE2A2A;
+  background-color: #cd9557;
+  border-color: #cd9557;
 }
 
 .btn-secondary:active, .btn-secondary:focus, .btn-secondary:hover {
