--- a/css/updates.css
+++ b/css/updates.css
@@ -166,8 +166,8 @@ body {
 }
 
 .btn-secondary {
-  background-color: #cd9557;
-  border-color: #cd9557;
+  background-color: #BE2A2A;
+  border-color: #BE2A2A;
 }
 
 .btn-secondary:active, .btn-secondary:focus, .btn-secondary:hover {
