--- a/css/updates.css
+++ b/css/updates.css
@@ -86,6 +86,10 @@ body {
   padding: 1rem;
 }
 
+.masthead .logo {
+  padding-top: 2rem;
+}
+
 @media (min-width: 768px) {
   .masthead {
     height: 100%;
@@ -110,7 +114,7 @@ body {
   .masthead .logo {
     padding-left: 3rem;
     padding-right: 10rem;
-    padding-bottom: 3rem;
+    padding-bottom: 5rem;
   }
 }
 
