--- a/css/updates.css
+++ b/css/updates.css
@@ -34,6 +34,7 @@ body {
   background-size: cover;
   /*background-color: #cd9557;*/
   /*opacity: 0.75;*/
+  background-color: #cd9557;
   opacity: 1;
   z-index: -1;
 }
@@ -60,7 +61,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(74, 74, 74, 0.8);
+  background-color: #4A4A4A;
   transform: skewY(4deg);
   transform-origin: bottom right;
 }
