--- a/css/updates.css
+++ b/css/updates.css
@@ -43,10 +43,6 @@ body {
   padding-top: 6rem;
 }
 
-.overlay .main-img img {
-  max-height: 0rem;
-}
-
 @media (min-width: 768px) {
   .overlay .main-img img {
     max-height: 20rem;
@@ -67,7 +63,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #4A4A4A;
+  background-color: rgba(74, 74, 74, 0.8);
   transform: skewY(4deg);
   transform-origin: bottom right;
 }
