--- a/css/updates.css
+++ b/css/updates.css
@@ -43,6 +43,10 @@ body {
   padding-top: 6rem;
 }
 
+.overlay .main-img img {
+  max-height: 0rem;
+}
+
 @media (min-width: 768px) {
   .overlay .main-img img {
     max-height: 20rem;
