--- a/css/updates.css
+++ b/css/updates.css
@@ -34,7 +34,7 @@ body {
   background-size: cover;
   /*background-color: #cd9557;*/
   /*opacity: 0.75;*/
-  background-color: #cd9557;
+  background-color: #4A4A4A;
   opacity: 1;
   z-index: -1;
 }
