--- a/css/updates.css
+++ b/css/updates.css
@@ -188,8 +188,8 @@ body {
 .btn-secondary {
   background-color: #BE2A2A;
   border-color: #BE2A2A;
-  padding-left: 3px;
-  padding-top: 2px;
+  padding-left: 2rem;
+  padding-top: 1rem;
 }
 
 .btn-secondary:active, .btn-secondary:focus, .btn-secondary:hover {
