--- a/css/updates.css
+++ b/css/updates.css
@@ -48,6 +48,11 @@ body {
   max-height: 0rem;
 }
 
+.logo  img {
+  max-height: 8rem;
+}
+
+
 @media (min-width: 768px) {
   .overlay .main-img img {
     max-height: 25rem;
@@ -183,16 +188,6 @@ body {
   .social-icons ul > li > a:hover {
     background-color: #002E66;
   }
-}
-
-.btn {
-  background-color: #BE2A2A;
-  border-color: #BE2A2A;
-}
-
-.btn:active, .btn:focus, .btn:hover {
-  background-color: #ba7c37 !important;
-  border-color: #ba7c37 !important;
 }
 
 .btn-secondary {
