--- a/css/updates.css
+++ b/css/updates.css
@@ -48,7 +48,7 @@ body {
   max-height: 0rem;
 }
 
-.logo  img {
+.logo-abt  img {
   max-height: 10rem;
   text-align: center;
   padding-top: 2rem;
