--- a/css/updates.css
+++ b/css/updates.css
@@ -10,6 +10,7 @@ h5,
 h6 {
   font-family: 'Oswald';
   font-weight: 700;
+  color:#4A4A4A;
 }
 
 body {
@@ -17,6 +18,7 @@ body {
   position: relative;
   font-family: 'Oswald';
   font-weight: 300;
+  color:#4A4A4A;
 }
 
 
