--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -140,6 +140,7 @@ a:focus, a:hover {
 
 .masthead .intro-body .brand-heading {
   font-size: 50px;
+  text-align: left;
 }
 
 .masthead .intro-body .intro-text {
