--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -3,8 +3,8 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  color: white;
-  background-color: black;
+  color: #37474f;
+  background-color: white;
 }
 
 html {
@@ -125,8 +125,8 @@ a:focus, a:hover {
   padding: 200px 0;
   text-align: center;
   color: white;
-  background: url("../img/intro-bg.jpg") no-repeat bottom center scroll;
-  background-color: black;
+  /* background: url("../img/intro-bg.jpg") no-repeat bottom center scroll; */
+  background-color: #03A9F4;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
