--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -126,7 +126,7 @@ a:focus, a:hover {
   text-align: center;
   color: white;
   /* background: url("../img/intro-bg.jpg") no-repeat bottom center scroll; */
-  background-image: none;
+  background: none;
   background-color: #03A9F4;
   -webkit-background-size: cover;
   -moz-background-size: cover;
