--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -286,12 +286,28 @@ img::-moz-selection {
   background: transparent;
 }
 
+.portfolio-box .portfolio-box-caption {
+  position: absolute;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  opacity: 0;
+  color: #fff;
+  background: rgba(3, 169, 244, 0.9);
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
   position: absolute;
   top: 50%;
   width: 100%;
   transform: translateY(-50%);
-  text-align: center;
+  text-align: left;
 }
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
