--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -349,3 +349,10 @@ img::-moz-selection {
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
    filter: grayscale(100%);
 }
+
+#sponsors img {
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+   filter: grayscale(100%);
+   max-width: 300px;
+
+}
