--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -350,9 +350,9 @@ img::-moz-selection {
    filter: grayscale(100%);
 }
 
-/* #sponsors img {
+#sponsors img {
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-   /* filter: grayscale(100%); */
+   filter: grayscale(100%);
 
-   /* max-width: 300px; */
-/* }  */
+   max-width: 300px;
+} 
