--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -153,6 +153,10 @@ a:focus, a:hover {
   text-align: left;
 }
 
+.masthead .m_align {
+  vertical-align: middle;
+}
+
 @media (min-width: 768px) {
   .masthead {
     height: 100%;
