--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -174,7 +174,8 @@ a:focus, a:hover {
   }
 
   .masthead .col-form-label-lg {
-    font-size: 48pt;
+    text-align: left;
+    font-size: 36pt;
   }
 }
 
