--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -156,7 +156,7 @@ a:focus, a:hover {
 }
 
 .masthead .malign {
-  vertical-align: middle;
+  vertical-align: text-top;
 }
 
 @media (min-width: 768px) {
