--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -384,3 +384,19 @@ img::-moz-selection {
   text-align: center;
   vertical-align: top;
 }
+
+.input[type="text"],
+.select.form-control {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #000000;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-radius: 0;
+}
+
+.input[type="text"]:focus,
+.select.form-control:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
