--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -385,8 +385,8 @@ img::-moz-selection {
   vertical-align: top;
 }
 
-.input[type="text"],
-.select.form-control {
+input[type="text"],
+select.form-control {
   background: transparent;
   border: none;
   border-bottom: 1px solid #000000;
@@ -395,8 +395,8 @@ img::-moz-selection {
   border-radius: 0;
 }
 
-.input[type="text"]:focus,
-.select.form-control:focus {
+input[type="text"]:focus,
+select.form-control:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
