--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -385,17 +385,17 @@ img::-moz-selection {
   vertical-align: top;
 }
 
-input[type="text"],
+input,
 select.form-control {
   background: transparent;
   border: none;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid #ffffff;
   -webkit-box-shadow: none;
   box-shadow: none;
   border-radius: 0;
 }
 
-input[type="text"]:focus,
+input:focus,
 select.form-control:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
