--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -385,7 +385,7 @@ img::-moz-selection {
   vertical-align: top;
 }
 
-input,
+input[type="text", text="email"],
 select.form-control {
   background: transparent;
   border: none;
@@ -395,7 +395,7 @@ select.form-control {
   border-radius: 0;
 }
 
-input:focus,
+input[type="text", text="email"]:focus,
 select.form-control:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
