--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -385,7 +385,7 @@ img::-moz-selection {
   vertical-align: top;
 }
 
-input[type="text", type="email"],
+input[type="text"],
 select.form-control {
   background: transparent;
   border: none;
@@ -395,7 +395,23 @@ select.form-control {
   border-radius: 0;
 }
 
-input[type="text", type="email"]:focus,
+input[type="text"]:focus,
+select.form-control:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+input[type="email"],
+select.form-control {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #ffffff;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-radius: 0;
+}
+
+input[type="email"]:focus,
 select.form-control:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
