--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -416,3 +416,9 @@ select.form-control:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+
+input[type="text"], textarea {
+outline: none;
+box-shadow:none !important;
+border:1px solid #ccc !important;
+}
