--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -389,6 +389,7 @@ input[type="text"],
 select.form-control {
   background: transparent;
   border: none;
+  outline: 0;
   border-bottom: 1px solid #ffffff;
   -webkit-box-shadow: none;
   box-shadow: none;
