--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -400,6 +400,9 @@ input[type="text"]:focus,
 select.form-control:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
+  background: transparent;
+  border-bottom: 1px solid #ffffff;
+  color: #ffffff
 }
 
 input[type="email"],
@@ -411,6 +414,7 @@ select.form-control {
   -webkit-box-shadow: none;
   box-shadow: none;
   border-radius: 0;
+
 }
 
 input[type="email"]:focus,
@@ -418,4 +422,6 @@ select.form-control:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
   background: transparent;
+  border-bottom: 1px solid #ffffff;
+  color: #ffffff
 }
