--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -385,7 +385,7 @@ img::-moz-selection {
   vertical-align: top;
 }
 
-input, textarea{
+input, textarea, select {
     color: #FFF;
     outline:none;
 }
