--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -248,16 +248,17 @@ a:focus, a:hover {
 }
 
 .btn-default {
-  color: #42DCA3;
-  border: 1px solid #42DCA3;
+  color: #ffffff;
+  border: 1px solid #ffffff;
   background-color: transparent;
+  padding: 5px 5px;
 }
 
 .btn-default:focus, .btn-default:hover {
-  color: black;
-  border: 1px solid #42DCA3;
+  color: ffffff;
+  border: 1px solid #37474f;
   outline: none;
-  background-color: #42DCA3;
+  background-color: #37474f;
 }
 
 ul.banner-social-buttons {
