--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -156,7 +156,8 @@ a:focus, a:hover {
 }
 
 .masthead img {
-  max-width: 300px;
+  max-width: 400px;
+  text-align: left;
 }
 
 .masthead .malign {
