--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -180,9 +180,9 @@ a:focus, a:hover {
 	/* width: 40px;
 	height: 40px;
 	border-radius: 20px; */
-	font-size: 25px;
+	/* font-size: 25px; */
 	text-align: center;
-	margin-right: 10px;
+	margin-right: 30px;
 	padding-top: 15%;
 }
 
