--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -186,6 +186,10 @@ a:focus, a:hover {
 	padding-top: 15%;
 }
 
+.masthead .fa:hover {
+  opacity: 0.8;
+}
+
 @media (min-width: 768px) {
   .masthead {
     height: 100%;
