--- a/dev/css/update_resources.css
+++ b/dev/css/update_resources.css
@@ -108,7 +108,7 @@ a:focus, a:hover {
     padding-top: 10px;
     padding-bottom: 10px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    background: #37474f;
+    background: #ffffff;
   }
   #mainNav .nav-link.active {
     outline: none;
