--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -186,13 +186,13 @@ a:focus, a:hover {
 	padding-top: 15%;
 }
 
-.masthead .fa .fa-list:hover {
+/* .masthead .fa .fa-list:hover {
   opacity: 0.8;
 }
 
 .masthead .fa:hover {
   opacity: 0.8;
-}
+} */
 
 @media (min-width: 768px) {
   .masthead {
