--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -496,4 +496,12 @@ select {
 
 #video .container {
   padding-top: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-top: 0px;
+  margin-right: 0px;
+}
+
+#video .embed-responsive {
+  width: 100%;
 }
