--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -495,11 +495,9 @@ select {
 }
 
 #video .container {
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
   margin-top: 0px;
   margin-right: 0px;
+  margin-left: 0px;
 }
 
 #video .embed-responsive {
