--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -498,6 +498,8 @@ select {
   margin-top: 0px;
   margin-right: 0px;
   margin-left: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
 }
 
 #video .embed-responsive {
