--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -505,4 +505,8 @@ select {
 #video .embed-responsive {
   width: 100%;
   margin-top: 0px;
+  position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
 }
