--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -505,7 +505,7 @@ select {
 #video .embed-responsive {
   width: 100%;
   margin-top: 0px;
-  position: absolute;
+  position: relative;
     right: 0;
     bottom: 0;
     min-width: 100%;
