--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -494,17 +494,9 @@ select {
   -webkit-appearance: none;
 }
 
-#video .embed-responsive .embed-responsive-16by9 {
-  padding-left: 0px;
-  padding-top: 0px;
-}
-
 #video .embed-responsive-item {
-  position: absolute;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    min-width: 100%;
+  min-width: 100%;
+  margin-top: 0px;
 }
 
 /* #video .embed-responsive .embed-responsive-16by9 .embed-responsive-item {
