--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -498,6 +498,10 @@ select {
   min-width: 100%;
   margin-left: 0px;
   margin-top: 0px;
+  margin-bottom: 0px;
+  padding-left: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 #video .embed-responsive-item {
