--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -494,7 +494,7 @@ select {
   -webkit-appearance: none;
 }
 
-#video .container .embed-responsive .embed-responsive-21by9 {
+#video .container .embed-responsive {
   min-width: 100%;
   margin-left: 0px;
   margin-top: 0px;
