--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -494,7 +494,7 @@ select {
   -webkit-appearance: none;
 }
 
-#video .container .embed-responsive {
+#video .container .embed-responsive .embed-responsive-16by9 {
   min-width: 100%;
   width: 100;
   margin-left: 0px;
