--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -498,7 +498,7 @@ select {
   min-width: 100%;
   width: 100;
   margin-left: 0px;
-  margin-top: -51%;
+  margin-top: -51px;
   margin-bottom: 0px;
   padding-left: 0px;
   padding-top: 0px;
