--- a/dev/css/update.css
+++ b/dev/css/update.css
@@ -498,10 +498,10 @@ select {
   min-width: 100%;
   width: 100;
   margin-left: 0px;
-  margin-top: -51px;
+  margin-top: -51%;
   margin-bottom: 0px;
   padding-left: 0px;
-  padding-top: 0px;
+  padding-top: -50%;
   padding-bottom: 0px;
 }
 
