--- a/css/update.css
+++ b/css/update.css
@@ -529,6 +529,6 @@ select {
     position: absolute;
     top: 0;
     left: 0;
-    min-width: 100%;
-    /* height: 100%; */
+    width: 100%;
+    height: 100%;
 }
