--- a/css/update.css
+++ b/css/update.css
@@ -521,7 +521,8 @@ select {
 
 .embed-container {
     position: relative;
-    padding-bottom: 56.25%;
+    padding-bottom: 80%;
+    /* padding-bottom: 56.25%; */
     height: 0; overflow: hidden;
     max-width: 100%; height: auto;
 }
