--- a/css/update.css
+++ b/css/update.css
@@ -521,8 +521,7 @@ select {
 
 .embed-container {
     position: relative;
-    padding-bottom: 80%;
-    /* padding-bottom: 56.25%; */
+    padding-bottom: 56.25%;
     height: 0; overflow: hidden;
     max-width: 100%; height: auto;
 }
@@ -532,4 +531,6 @@ select {
     left: 0;
     min-width: 100%;
     height: 100%;
+    margin-bottom:0;
+    padding-bottom:0;
 }
