--- a/css/update.css
+++ b/css/update.css
@@ -523,13 +523,13 @@ select {
     position: relative;
     padding-bottom: 56.25%;
     height: 0; overflow: hidden;
-    max-width: 100%; height: auto;
+    min-width: 100%; height: auto;
 }
 .embed-container iframe, .embed-container object, .embed-container embed {
     position: absolute;
     top: 0;
     left: 0;
-    min-width: 100%;
+    width: 100%;
     height: 100%;
     margin-bottom:0;
     padding-bottom:0;
