--- a/css/update.css
+++ b/css/update.css
@@ -523,7 +523,7 @@ select {
     position: relative;
     padding-bottom: 56.25%;
     height: 0; overflow: hidden;
-    min-width: 100%; height: auto;
+    min-width: 100%; height: 50%;
 }
 .embed-container iframe, .embed-container object, .embed-container embed {
     position: absolute;
