--- a/css/update.css
+++ b/css/update.css
@@ -522,8 +522,11 @@ select {
 .embed-container {
     position: relative;
     padding-bottom: 56.25%;
-    height: 0; overflow: hidden;
-    min-width: 100%; height: 50%;
+    height: 0;
+    overflow: hidden;
+    min-width: 100%;
+    height: auto;
+    margin: 0;
 }
 .embed-container iframe, .embed-container object, .embed-container embed {
     position: absolute;
