--- a/css/update.css
+++ b/css/update.css
@@ -525,7 +525,7 @@ select {
     height: 0;
     overflow: hidden;
     min-width: 100%;
-    height: auto;
+    /* height: auto; */
     margin: 0;
 }
 .embed-container iframe, .embed-container object, .embed-container embed {
@@ -533,7 +533,7 @@ select {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     margin-bottom:0;
     padding-bottom:0;
 }
