--- a/css/update.css
+++ b/css/update.css
@@ -494,22 +494,7 @@ select {
   -webkit-appearance: none;
 }
 
-#video .container .embed-responsive .embed-responsive-16by9 {
-  min-width: 100%;
-  width: 100;
-  margin-left: 0px;
-  margin-top: -51%;
-  margin-bottom: 0px;
-  padding-left: 0px;
-  padding-top: -50%;
-  padding-bottom: 0px;
-}
 
-#video .embed-responsive-item {
-  position: absolute;
-  min-width: 100%;
-  margin-top: 0px;
-}
 
 /* #video .embed-responsive .embed-responsive-16by9 .embed-responsive-item {
   position: relative;
@@ -520,20 +505,17 @@ select {
 } */
 
 .embed-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    min-width: 100%;
-    /* height: auto; */
-    margin: 0;
+  position: relative;
+  padding-bottom: 56.25%;
+  overflow: hidden;
 }
-.embed-container iframe, .embed-container object, .embed-container embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    /* height: 100%; */
-    margin-bottom:0;
-    padding-bottom:0;
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 100%;
 }
