--- a/css/update.css
+++ b/css/update.css
@@ -508,6 +508,7 @@ select {
   position: relative;
   padding-bottom: 56.25%;
   overflow: hidden;
+  margin: 0;
 }
 
 .embed-container iframe,
@@ -519,4 +520,5 @@ select {
   min-width: 100%;
   height: 100%;
   display:block;
+  margin: 0;
 }
