--- a/css/update.css
+++ b/css/update.css
@@ -518,7 +518,8 @@ select {
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 100%;
+  max-height: 816px;
+  /* height: 100%; */
   display:block;
   margin: 0;
 }
