--- a/css/update.css
+++ b/css/update.css
@@ -509,6 +509,7 @@ select {
   padding-bottom: 56.25%;
   overflow: hidden;
   margin: 0;
+  max-height: 817px;
 }
 
 .embed-container iframe,
@@ -518,8 +519,7 @@ select {
   top: 0;
   left: 0;
   min-width: 100%;
-  max-height: 816px;
-  /* height: 100%; */
+  height: 100%;
   display:block;
   margin: 0;
 }
