--- a/css/update.css
+++ b/css/update.css
@@ -520,7 +520,5 @@ select {
   left: 0;
   min-width: 100%;
   height: 100%;
-  display:block;
-  margin: 0;
-  vertical-align: bottom;
+  margin-top: -200px;
 }
