--- a/css/update.css
+++ b/css/update.css
@@ -510,8 +510,8 @@ select {
   overflow: hidden;
   margin: 0;
   overflow-y: hidden;
-  margin-bottom: -200px;
-  padding-bottom: -200px;
+  /* margin-bottom: -200px; */
+  padding-bottom: -150px;
 }
 
 .embed-container iframe,
