--- a/css/update_resources.css
+++ b/css/update_resources.css
@@ -524,3 +524,18 @@ select {
     width: 100%;
     height: 100%;
 }
+
+.btn-lg {
+  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  text-transform: uppercase;
+  border-radius: 0;
+  font-size: 36pt;
+  padding: 8px 24px;
+  border-color: #37474f;
+  border-width: 2px;
+  color: #37474f;
+}
