--- a/css/update_resources.css
+++ b/css/update_resources.css
@@ -538,5 +538,6 @@ select {
   border-color: #37474f;
   border-width: 2px;
   color: #37474f;
-  width: 60px;
+  width: 600px;
+  text-align: center;
 }
